k8s/31-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopverse-frontend
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/name: shopverse
    app.kubernetes.io/instance: shopverse
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: shopverse
    app.kubernetes.io/instance: shopverse
    app.kubernetes.io/component: frontend
